meta-axxia: added the dizzy configuration files
Signed-off-by: Charlie Paul <cpaul.windriver@gmail.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,6 +9,6 @@ BBFILE_COLLECTIONS += "lsi"
 BBFILE_PATTERN_lsi := "^${LAYERDIR}/"
 BBFILE_PRIORITY_lsi = "5"
 
-IMAGE_INSTALL_append += "u-boot-lsi"
+# IMAGE_INSTALL_append += "u-boot-lsi"
 
 DISTRO_FEATURES_append += " pam"
