--- a/conf/machine/axxiaarm.conf
+++ b/conf/machine/axxiaarm.conf
@@ -3,11 +3,11 @@
 #@DESCRIPTION: Machine configuration for LSI Axxia ARM systems
 
 PREFERRED_VERSION_linux-yocto ?= "3.10%"
-PREFERRED_VERSION_u-boot-lsi ?= "2013.01.01%"
+#PREFERRED_VERSION_u-boot-lsi ?= "2013.01.01%"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
-PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-lsi"
+#PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-lsi"
 
-EXTRA_IMAGEDEPENDS = "u-boot-lsi"
+#EXTRA_IMAGEDEPENDS = "u-boot-lsi"
 
 MACHINE_FEATURES += "ext3"
 
