--- a/recipes-kernel/linux/conf/linux-yocto/linux-3.10/axxiapowerpc/axxiapowerpc-common-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-3.10/axxiapowerpc/axxiapowerpc-common-hw.cfg
@@ -70,3 +70,7 @@ CONFIG_NET_VENDOR_WIZNET=y
 # I2C HID support
 #
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
+
+CONFIG_HW_RANDOM=y
+CONFIG_HW_RANDOM_AXXIA=y
+
