linux-yocto-3.19: fragments match github defconfig
With this patch, the resulting deconfig using linux-yocto-3.19
fragments matches the defconfig from github. There is no
support for preempt-rt in linux-yocto-3.19, so there is no
preempt-rt defconfig to match.

Signed-off-by: Cristian Bercaru <cristian.bercaru@windriver.com>

--- a/recipes-kernel/linux/conf/linux-yocto/linux-3.19/axxiaarm/common/common-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-3.19/axxiaarm/common/common-hw.cfg
@@ -12,6 +12,11 @@
 #.........................................................................
 
 #
+# RCU Subsystem
+#
+# CONFIG_MEMCG is not set
+
+#
 # Support for hot-pluggable CPUs
 #
 CONFIG_HOTPLUG_CPU=y
