--- a/recipes-kernel/linux/conf/linux-yocto/linux-3.19/axxiaarm/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-3.19/axxiaarm/common/common-non-hw.cfg
@@ -35,6 +35,11 @@ CONFIG_LOG_BUF_SHIFT=14
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 # CONFIG_NET_NS is not set
+# CONFIG_RD_BZIP2 is not set
+# CONFIG_RD_LZMA is not set
+# CONFIG_RD_XZ is not set
+# CONFIG_RD_LZO is not set
+# CONFIG_RD_LZ4 is not set
 
 # CONFIG_UIDGID_STRICT_TYPE_CHECKS is not set
 CONFIG_SCHED_AUTOGROUP=y
