linux-yocto-3.14: axxiaarm: update config fragments to match github defconfigs
Signed-off-by: Cristian Bercaru <cristian.bercaru@windriver.com>

--- a/recipes-kernel/linux/conf/linux-yocto/linux-3.14/axxiaarm/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-3.14/axxiaarm/common/common-non-hw.cfg
@@ -35,10 +35,7 @@ CONFIG_LOG_BUF_SHIFT=14
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 # CONFIG_NET_NS is not set
-
-# CONFIG_UIDGID_STRICT_TYPE_CHECKS is not set
 CONFIG_SCHED_AUTOGROUP=y
-
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL_SYSCALL=y
 
@@ -46,7 +43,7 @@ CONFIG_SYSCTL_SYSCALL=y
 # Kernel Performance Events And Counters
 #
 # CONFIG_COMPAT_BRK is not set
-# CONFIG_OPROFILE is not set
+CONFIG_PROFILING=y
 
 #
 # IO Schedulers
@@ -110,7 +107,6 @@ CONFIG_LLC=y
 # CONFIG_NET_PKTGEN is not set
 # CONFIG_RFKILL is not set
 
-
 #
 # Device Tree and Open Firmware support
 #
@@ -172,11 +168,6 @@ CONFIG_VIRT_DRIVERS=y
 # Virtio drivers
 #
 # CONFIG_VIRTIO_BALLOON is not set
-
-#
-# Common Clock Framework
-#
-CONFIG_COMMON_CLK_DEBUG=y
 
 #
 # File systems
