--- a/recipes-kernel/linux/conf/linux-yocto/linux-3.14/axxiaarm/preempt-rt/big-endian-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-3.14/axxiaarm/preempt-rt/big-endian-non-hw.cfg
@@ -11,6 +11,13 @@
 #
 #.........................................................................
 
-CONFIG_HOTPLUG_CPU_COMPLETE_POWER_DOWN=y
-# CONFIG_HOTPLUG_CPU_LOW_POWER is not set
-CONFIG_HOTPLUG_CPU_L2_POWER_DOWN=y
+#
+# RCU Subsystem
+#
+# CONFIG_RCU_BOOST is not set
+
+#
+# Kernel Performance Events And Counters
+#
+# CONFIG_KPROBES is not set
+
