--- a/recipes-kernel/linux/conf/linux-yocto/linux-3.14/axxiaarm/standard/big-endian-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-3.14/axxiaarm/standard/big-endian-hw.cfg
@@ -11,6 +11,17 @@
 #
 #.........................................................................
 
-CONFIG_HOTPLUG_CPU_COMPLETE_POWER_DOWN=y
-# CONFIG_HOTPLUG_CPU_LOW_POWER is not set
-CONFIG_HOTPLUG_CPU_L2_POWER_DOWN=y
+#
+# Bus devices
+#
+# CONFIG_ARM_CCI is not set
+
+#
+# Distributed Switch Architecture drivers
+#
+CONFIG_NET_VENDOR_ARC=y
+
+#
+# Multifunction device drivers
+#
+# CONFIG_MFD_SYSCON is not set
