--- a/recipes-kernel/linux/conf/linux-yocto/linux-3.14/axxiaarm/standard/smmon.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-3.14/axxiaarm/standard/smmon.cfg
@@ -11,6 +11,5 @@
 #
 #.........................................................................
 
-CONFIG_HOTPLUG_CPU_COMPLETE_POWER_DOWN=y
-# CONFIG_HOTPLUG_CPU_LOW_POWER is not set
-CONFIG_HOTPLUG_CPU_L2_POWER_DOWN=y
+CONFIG_LSI_SMMON=y
+# CONFIG_EDAC is not set
