--- a/recipes-kernel/linux/conf/linux-yocto/linux-3.14/axxiapowerpc/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-3.14/axxiapowerpc/common/common-non-hw.cfg
@@ -36,6 +36,11 @@ CONFIG_SYSCTL_SYSCALL=y
 # CONFIG_KPROBES is not set
 
 #
+# Kernel Performance Events And Counters
+#
+CONFIG_PROFILING=y
+
+#
 # GCOV-based kernel profiling
 #
 CONFIG_MODULE_FORCE_LOAD=y
