add compiler tune for 32-bit armv8
This patch enables the user to compile 32-bit packages optimized for
Axxia's 5600 X9 platform, which is based on an armv8 core. To do this,
edit the following variables in 'local.conf':
  MACHINE = "axxiaarm"
  CHIPSET = "X9"
If CHIPSET is not set, it will default to "5500", the Axxia platform
based on armv7, cortex-a15. The code is also optimized to use Neon and
VFPv3 vector floating point instructions, regardless of CHIPSET. After
the recipes are parsed, the bitbake log should display the following
  TUNE_FEATURES = "arm armv8a vfp neon"

Signed-off-by: Cristian Bercaru <cristian.bercaru@windriver.com>

--- a/conf/machine/axxiaarm.conf
+++ b/conf/machine/axxiaarm.conf
@@ -2,7 +2,7 @@
 #@NAME: axxiaarm
 #@DESCRIPTION: Machine configuration for LSI Axxia ARM systems
 
-PREFERRED_VERSION_linux-yocto ?= "3.14%"
+PREFERRED_VERSION_linux-yocto ?= "4.1%"
 #PREFERRED_VERSION_u-boot-lsi ?= "2013.01.01%"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
 #PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-lsi"
@@ -13,7 +13,11 @@ MACHINE_FEATURES += "ext3"
 
 MACHINE_EXTRA_RRECOMMENDS += ""
 
-require conf/machine/include/tune-cortexa15.inc
+TUNE_ARMV8A = "conf/machine/include/arm/arch-armv8a.inc"
+TUNE_ARMV7A = "conf/machine/include/tune-cortexa15.inc"
+TUNE = "${@bb.utils.contains('CHIPSET', 'X9', '${TUNE_ARMV8A}', '${TUNE_ARMV7A}', d)}"
+require ${TUNE}
+DEFAULTTUNE_armv8a = "armv8a-neon"
 
 KARCH = "arm"
 KERNEL_IMAGETYPE = "zImage"
