linux-yocto-4.1: add debug options in config fragments
Signed-off-by: Cristian Bercaru <cristian.bercaru@windriver.com>

--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm64/common/common-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm64/common/common-hw.cfg
@@ -44,3 +44,8 @@ CONFIG_HID_KENSINGTON=y
 CONFIG_HID_LOGITECH=y
 CONFIG_HID_MICROSOFT=y
 CONFIG_HID_MONTEREY=y
+
+#
+# Virtio drivers
+#
+# CONFIG_VIRTIO_PCI is not set
