linux-yocto-3.14: add debug options in config fragments
Signed-off-by: Cristian Bercaru <cristian.bercaru@windriver.com>

--- a/recipes-kernel/linux/conf/linux-yocto/linux-3.14/axxiapowerpc/standard/dbg-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-3.14/axxiapowerpc/standard/dbg-non-hw.cfg
@@ -12,6 +12,18 @@
 #.........................................................................
 
 #
+# Kernel Performance Events And Counters
+#
+CONFIG_SLUB_DEBUG=y
+# CONFIG_OPROFILE is not set
+
+#
+# Kernel options
+#
+# CONFIG_HIGHMEM is not set
+CONFIG_MTD_NAND_EP501X_UBOOTENV=y
+
+#
 # Memory Debugging
 #
 CONFIG_DEBUG_PAGEALLOC=y
@@ -22,6 +34,7 @@ CONFIG_DEBUG_OBJECTS_TIMERS=y
 CONFIG_DEBUG_OBJECTS_WORK=y
 CONFIG_DEBUG_OBJECTS_RCU_HEAD=y
 CONFIG_DEBUG_OBJECTS_PERCPU_COUNTER=y
+CONFIG_SLUB_DEBUG_ON=y
 CONFIG_SLUB_STATS=y
 CONFIG_DEBUG_KMEMLEAK=y
 CONFIG_DEBUG_KMEMLEAK_DEFAULT_OFF=y
@@ -30,13 +43,12 @@ CONFIG_DEBUG_VM=y
 CONFIG_DEBUG_VM_RB=y
 CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_DEBUG_PER_CPU_MAPS=y
-CONFIG_DEBUG_HIGHMEM=y
-CONFIG_DEBUG_STACKOVERFLOW=y
 
 #
 # Debug Lockups and Hangs
 #
 CONFIG_LOCKUP_DETECTOR=y
+# CONFIG_DETECT_HUNG_TASK is not set
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 
@@ -44,6 +56,20 @@ CONFIG_TIMER_STATS=y
 # Lock Debugging
 #
 CONFIG_DEBUG_RT_MUTEXES=y
-CONFIG_DEBUG_WW_MUTEX_SLOWPATH=y
+CONFIG_PROVE_LOCKING=y
 CONFIG_LOCK_STAT=y
+CONFIG_DEBUG_LOCKDEP=y
 CONFIG_DEBUG_ATOMIC_SLEEP=y
+CONFIG_DEBUG_KOBJECT=y
+CONFIG_DEBUG_WRITECOUNT=y
+CONFIG_DEBUG_LIST=y
+CONFIG_DEBUG_SG=y
+CONFIG_DEBUG_NOTIFIERS=y
+CONFIG_DEBUG_CREDENTIALS=y
+
+#
+# RCU Debugging
+#
+CONFIG_SPARSE_RCU_POINTER=y
+CONFIG_RCU_CPU_STALL_INFO=y
+CONFIG_RCU_TRACE=y
