linux-yocto_4.1: Update fragments to match defconfigs
The config generated from fragments for Yocto should match the
one generated from Github defconfigs with make.

Thi patch update local fragments for Yocto to match defconfigs
from Github 4.1 Kernel at this level:

commit 827aeb95dcad487eb8486bc5a6987141d1435f26
axxia: defconfig: Enable function tracer for 5500

Major changes:
   - Enable function tracer for 5500
   - Remove suport for Intel NET devices
   - Debug option (e.g. KMEMLEAK log size to 8192)

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm/common/common-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm/common/common-hw.cfg
@@ -38,6 +38,7 @@ CONFIG_HOTPLUG_CPU=y
 # CONFIG_NET_VENDOR_EXAR is not set
 # CONFIG_NET_VENDOR_FARADAY is not set
 # CONFIG_NET_VENDOR_HP is not set
+# CONFIG_NET_VENDOR_INTEL is not set
 # CONFIG_NET_VENDOR_MARVELL is not set
 # CONFIG_NET_VENDOR_MELLANOX is not set
 # CONFIG_NET_VENDOR_MICREL is not set
