--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm/common/common-non-hw.cfg
@@ -264,7 +264,9 @@ CONFIG_NLS_ISO8859_1=y
 #
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 # CONFIG_RCU_CPU_STALL_INFO is not set
-# CONFIG_FTRACE is not set
+# CONFIG_FTRACE_SYSCALLS is not set
+# CONFIG_BLK_DEV_IO_TRACE is not set
+# CONFIG_UPROBE_EVENT is not set
 # CONFIG_KGDB is not set
 CONFIG_DEBUG_USER=y
 
