--- a/conf/machine/axxiaarm.conf
+++ b/conf/machine/axxiaarm.conf
@@ -13,11 +13,19 @@ MACHINE_FEATURES += "ext3"
 
 MACHINE_EXTRA_RRECOMMENDS += ""
 
-TUNE_ARMV8A = "conf/machine/include/arm/arch-armv8a.inc"
-TUNE_ARMV7A = "conf/machine/include/tune-cortexa15.inc"
-TUNE = "${@bb.utils.contains('CHIPSET', 'X9', '${TUNE_ARMV8A}', '${TUNE_ARMV7A}', d)}"
-require ${TUNE}
-DEFAULTTUNE_armv8a = "armv8a-neon"
+# Default tune will be for 5500 board: cortexa17 (armv7a)
+CHIPSET ?= "5500"
+TUNE_X9 = "conf/machine/include/tune-cortexa57.inc"
+TUNE_XLF = "conf/machine/include/tune-cortexa53.inc"
+TUNE_5500 = "conf/machine/include/tune-cortexa15.inc"
+require ${TUNE_${CHIPSET}}
+
+# Armv8a SoCs supports 32-bit and 64-bit states. Set default to 32-bit state for axxiarm machine
+DEFAULTTUNE_X9 = "cortexa57_32-crypto"
+DEFAULTTUNE_XLF = "cortexa53_32-crypto"
+DEFAULTTUNE_5500 = "cortexa15-neon"
+DEFAULTTUNE = "${@bb.utils.contains('CHIPSET', 'X9', '${DEFAULTTUNE_X9}', \
+	          bb.utils.contains('CHIPSET', 'XLF', '${DEFAULTTUNE_XLF}', '${DEFAULTTUNE_5500}', d), d)}"
 
 KARCH = "arm"
 KERNEL_IMAGETYPE = "zImage"
