machine/axxiaarm*: Overwrite DEFAULTTUNE from local.conf
In axxiaarm and axxiaarm64 machine configuration files, the
DEFAULTTUNE variable was hard-coded to a default tune for each
board and the choice was done with CHIPSET variable.

Now the DEFAULTTUNE can be overwritten in local.conf with one of
available tunes and just when is not set, the default tunes will
be used.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/machine/axxiaarm.conf
+++ b/conf/machine/axxiaarm.conf
@@ -24,7 +24,7 @@ require ${TUNE_${CHIPSET}}
 DEFAULTTUNE_X9 = "cortexa57_32-crypto"
 DEFAULTTUNE_XLF = "cortexa53_32-crypto"
 DEFAULTTUNE_5500 = "cortexa15-neon"
-DEFAULTTUNE = "${@bb.utils.contains('CHIPSET', 'X9', '${DEFAULTTUNE_X9}', \
+DEFAULTTUNE ?= "${@bb.utils.contains('CHIPSET', 'X9', '${DEFAULTTUNE_X9}', \
 	          bb.utils.contains('CHIPSET', 'XLF', '${DEFAULTTUNE_XLF}', '${DEFAULTTUNE_5500}', d), d)}"
 
 KARCH = "arm"
