--- a/conf/machine/axxiaarm64.conf
+++ b/conf/machine/axxiaarm64.conf
@@ -22,7 +22,7 @@ require ${TUNE_${CHIPSET}}
 # Armv8a SoCs supports 32-bit and 64-bit states. Set default to 32-bit state for axxiarm machine
 DEFAULTTUNE_X9 = "cortexa57_64-crypto"
 DEFAULTTUNE_XLF = "cortexa53_64-crypto"
-DEFAULTTUNE = "${@bb.utils.contains('CHIPSET', 'XLF', '${DEFAULTTUNE_XLF}', '${DEFAULTTUNE_X9}', d)}"
+DEFAULTTUNE ?= "${@bb.utils.contains('CHIPSET', 'XLF', '${DEFAULTTUNE_XLF}', '${DEFAULTTUNE_X9}', d)}"
 
 KARCH = "arm64"
 KERNEL_IMAGETYPE = "Image"
