--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm/common/dbg-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm/common/dbg-non-hw.cfg
@@ -30,6 +30,7 @@ CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=8192
 CONFIG_DEBUG_STACK_USAGE=y
 CONFIG_DEBUG_VM=y
 CONFIG_DEBUG_VM_RB=y
+# CONFIG_DEBUG_VM is not set
 CONFIG_DEBUG_MEMORY_INIT=y
 # CONFIG_DEBUG_PER_CPU_MAPS is not set
 CONFIG_DEBUG_HIGHMEM=y
@@ -51,7 +52,7 @@ CONFIG_PROVE_LOCKING=y
 CONFIG_LOCK_STAT=y
 CONFIG_DEBUG_LOCKDEP=y
 CONFIG_DEBUG_ATOMIC_SLEEP=y
-CONFIG_DEBUG_KOBJECT=y
+# CONFIG_DEBUG_KOBJECT is not set
 CONFIG_DEBUG_LIST=y
 CONFIG_DEBUG_SG=y
 CONFIG_DEBUG_NOTIFIERS=y
