u-boot: Rename recipes to Axxia and update git link
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,10 +5,10 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "lsi"
-BBFILE_PATTERN_lsi := "^${LAYERDIR}/"
-BBFILE_PRIORITY_lsi = "5"
+BBFILE_COLLECTIONS += "axxia"
+BBFILE_PATTERN_axxia := "^${LAYERDIR}/"
+BBFILE_PRIORITY_axxia = "5"
 
-# IMAGE_INSTALL_append += "u-boot-lsi"
+# IMAGE_INSTALL_append += "u-boot-axxia"
 
 DISTRO_FEATURES_append += " pam"
