--- a/conf/machine/axxiaarm64.conf
+++ b/conf/machine/axxiaarm64.conf
@@ -1,13 +1,13 @@
 #@TYPE: Machine
 #@NAME: axxiaarm64
-#@DESCRIPTION: Machine configuration for LSI Axxia ARM64 systems
+#@DESCRIPTION: Machine configuration for INTEL Axxia ARM64 systems
 
 PREFERRED_VERSION_linux-yocto ?= "3.14%"
-#PREFERRED_VERSION_u-boot-lsi ?= "2013.01.01%"
+#PREFERRED_VERSION_u-boot-axxia ?= "2013.01.01%"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
-#PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-lsi"
+#PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-axxia"
 
-#EXTRA_IMAGEDEPENDS = "u-boot-lsi"
+#EXTRA_IMAGEDEPENDS = "u-boot-axxia"
 
 MACHINE_FEATURES += "ext3"
 
