--- a/conf/machine/axxiapowerpc.conf
+++ b/conf/machine/axxiapowerpc.conf
@@ -1,9 +1,9 @@
 #@TYPE: Machine
 #@NAME: axxiapowerpc
-#@DESCRIPTION: Machine configuration for the LSI Axxia PowerPC systems
+#@DESCRIPTION: Machine configuration for the INTEL Axxia PowerPC systems
 
 PREFERRED_VERSION_linux-yocto ?= "3.14%"
-PREFERRED_VERSION_u-boot-lsi ?= "2010.03%"
+PREFERRED_VERSION_u-boot-axxia ?= "2010.03%"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
 
 MACHINE_FEATURES += ""
