linux-yocto: 4.1: Update kernel fragments to match tag 1.51
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm/common/common-non-hw.cfg
@@ -22,6 +22,8 @@ CONFIG_AUDIT=y
 CONFIG_LOG_BUF_SHIFT=14
 # CONFIG_CGROUP_DEBUG is not set
 # CONFIG_CGROUP_FREEZER is not set
+CONFIG_PAGE_COUNTER=y
+CONFIG_CGROUP_HUGETLB=y
 # CONFIG_MEMCG is not set
 # CONFIG_RT_GROUP_SCHED is not set
 # CONFIG_BLK_CGROUP is not set
@@ -94,17 +96,56 @@ CONFIG_LLC=y
 # CONFIG_NET_SCHED is not set
 
 #
+# Core Netfilter Configuration
+#
+# CONFIG_NF_CONNTRACK_MARK is not set
+# CONFIG_NF_NAT_REDIRECT is not set
+
+#
+# IP: Netfilter Configuration
+#
+# CONFIG_NF_REJECT_IPV4 is not set
+# CONFIG_IP_NF_MATCH_ECN is not set
+# CONFIG_IP_NF_MATCH_TTL is not set
+# CONFIG_IP_NF_FILTER is not set
+# CONFIG_IP_NF_TARGET_NETMAP is not set
+# CONFIG_IP_NF_TARGET_REDIRECT is not set
+# CONFIG_IP_NF_TARGET_CLUSTERIP is not set
+# CONFIG_IP_NF_TARGET_ECN is not set
+# CONFIG_IP_NF_RAW is not set
+# CONFIG_IP_NF_ARPTABLES is not set
+
+#
+# IPv6: Netfilter Configuration
+#
+# CONFIG_IP6_NF_MATCH_EUI64 is not set
+# CONFIG_IP6_NF_MATCH_FRAG is not set
+# CONFIG_IP6_NF_MATCH_OPTS is not set
+# CONFIG_IP6_NF_MATCH_HL is not set
+# CONFIG_IP6_NF_MATCH_IPV6HEADER is not set
+# CONFIG_IP6_NF_MATCH_RT is not set
+# CONFIG_IP6_NF_FILTER is not set
+# CONFIG_IP6_NF_RAW is not set
+# CONFIG_BRIDGE_NF_EBTABLES is not set
+
+#
 # Network testing
 #
 # CONFIG_NET_PKTGEN is not set
 # CONFIG_RFKILL is not set
-
+CONFIG_BRIDGE_NETFILTER=m
 
 #
 # Device Tree and Open Firmware support
 #
 # CONFIG_BLK_DEV_CRYPTOLOOP is not set
 # CONFIG_BLK_DEV_NBD is not set
+# CONFIG_PNP_DEBUG_MESSAGES is not set
+
+#
+# SCSI Transports
+#
+# CONFIG_ATA_ACPI is not set
 
 #
 # PIO-only SFF controllers
@@ -196,6 +237,8 @@ CONFIG_NTFS_FS=y
 # CONFIG_CONFIGFS_FS is not set
 CONFIG_JFFS2_FS=y
 CONFIG_CRAMFS=y
+CONFIG_HUGETLBFS=y
+CONFIG_HUGETLB_PAGE=y
 # CONFIG_MINIX_FS is not set
 # CONFIG_ROMFS_FS is not set
 # CONFIG_AUFS_FS is not set
@@ -253,11 +296,17 @@ CONFIG_NLS_ISO8859_1=y
 #
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 # CONFIG_RCU_CPU_STALL_INFO is not set
+CONFIG_IRQSOFF_TRACER=y
+CONFIG_INTERRUPT_OFF_HIST=y
+CONFIG_SCHED_TRACER=y
+CONFIG_WAKEUP_LATENCY_HIST=y
 # CONFIG_FTRACE_SYSCALLS is not set
+CONFIG_STACK_TRACER=y
 # CONFIG_BLK_DEV_IO_TRACE is not set
 # CONFIG_UPROBE_EVENT is not set
 # CONFIG_KGDB is not set
 CONFIG_DEBUG_USER=y
+CONFIG_FUNCTION_PROFILER=y
 
 #
 # Security options
@@ -321,4 +370,5 @@ CONFIG_CRYPTO_SHA256=y
 #
 # Library routines
 #
+CONFIG_LIBCRC32C=y
 # CONFIG_LIBCRC32C is not set
