--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm64/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm64/common/common-non-hw.cfg
@@ -23,6 +23,7 @@ CONFIG_CGROUP_HUGETLB=y
 CONFIG_SCHED_AUTOGROUP=y
 # CONFIG_RELAY is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+CONFIG_SYSCTL_SYSCALL=y
 CONFIG_KALLSYMS_ALL=y
 # CONFIG_EMBEDDED is not set
 
@@ -89,18 +90,58 @@ CONFIG_VLAN_8021Q=y
 CONFIG_BPF_JIT=y
 
 #
+# Core Netfilter Configuration
+#
+# CONFIG_NF_CONNTRACK_MARK is not set
+# CONFIG_NF_NAT_REDIRECT is not set
+
+#
+# IP: Netfilter Configuration
+#
+# CONFIG_NF_REJECT_IPV4 is not set
+# CONFIG_IP_NF_MATCH_ECN is not set
+# CONFIG_IP_NF_MATCH_TTL is not set
+# CONFIG_IP_NF_FILTER is not set
+# CONFIG_IP_NF_TARGET_NETMAP is not set
+# CONFIG_IP_NF_TARGET_REDIRECT is not set
+# CONFIG_IP_NF_TARGET_CLUSTERIP is not set
+# CONFIG_IP_NF_TARGET_ECN is not set
+# CONFIG_IP_NF_RAW is not set
+# CONFIG_IP_NF_ARPTABLES is not set
+
+#
+# IPv6: Netfilter Configuration
+#
+# CONFIG_IP6_NF_MATCH_EUI64 is not set
+# CONFIG_IP6_NF_MATCH_FRAG is not set
+# CONFIG_IP6_NF_MATCH_OPTS is not set
+# CONFIG_IP6_NF_MATCH_HL is not set
+# CONFIG_IP6_NF_MATCH_IPV6HEADER is not set
+# CONFIG_IP6_NF_MATCH_RT is not set
+# CONFIG_IP6_NF_FILTER is not set
+# CONFIG_IP6_NF_RAW is not set
+# CONFIG_BRIDGE_NF_EBTABLES is not set
+
+#
 # Network testing
 #
 # CONFIG_NET_PKTGEN is not set
 # CONFIG_RFKILL is not set
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
+CONFIG_BRIDGE_NETFILTER=m
 
 #
 # Device Tree and Open Firmware support
 #
 # CONFIG_BLK_DEV_CRYPTOLOOP is not set
 # CONFIG_BLK_DEV_NBD is not set
+# CONFIG_PNP_DEBUG_MESSAGES is not set
+
+#
+# SCSI Transports
+#
+# CONFIG_ATA_ACPI is not set
 
 #
 # PIO-only SFF controllers
@@ -234,11 +275,17 @@ CONFIG_DETECT_HUNG_TASK=y
 #
 # RCU Debugging
 #
+CONFIG_IRQSOFF_TRACER=y
+CONFIG_INTERRUPT_OFF_HIST=y
+CONFIG_SCHED_TRACER=y
+CONFIG_WAKEUP_LATENCY_HIST=y
 # CONFIG_FTRACE_SYSCALLS is not set
+CONFIG_STACK_TRACER=y
 # CONFIG_BLK_DEV_IO_TRACE is not set
+CONFIG_FUNCTION_PROFILER=y
 
 #
-# RCU Debugging
+# Runtime Testing
 #
 # CONFIG_KGDB is not set
 
