--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm64/common/common-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm64/common/common-hw.cfg
@@ -19,6 +19,12 @@ CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_CMA=y
 
 #
+# Serial drivers
+#
+# CONFIG_SERIAL_8250_PNP is not set
+# CONFIG_SERIAL_8250_FINTEK is not set
+
+#
 # Frame buffer hardware drivers
 #
 CONFIG_FB_ARMCLCD=y
@@ -29,21 +35,6 @@ CONFIG_FB_ARMCLCD=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
-
-#
-# Special HID drivers
-#
-CONFIG_HID_A4TECH=y
-CONFIG_HID_APPLE=y
-CONFIG_HID_BELKIN=y
-CONFIG_HID_CHERRY=y
-CONFIG_HID_CHICONY=y
-CONFIG_HID_CYPRESS=y
-CONFIG_HID_EZKEY=y
-CONFIG_HID_KENSINGTON=y
-CONFIG_HID_LOGITECH=y
-CONFIG_HID_MICROSOFT=y
-CONFIG_HID_MONTEREY=y
 
 #
 # Virtio drivers
