linux-yocto: 4.9: Update fragments to match defconfigs from 1.4 tag
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.9/axxiaarm64/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.9/axxiaarm64/common/common-non-hw.cfg
@@ -32,6 +32,7 @@ CONFIG_KALLSYMS_ALL=y
 #
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
+# CONFIG_KPROBES is not set
 CONFIG_JUMP_LABEL=y
 
 #
@@ -187,8 +188,10 @@ CONFIG_EXT3_FS=y
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
 # CONFIG_EXT4_FS_POSIX_ACL is not set
 # CONFIG_EXT4_FS_SECURITY is not set
+# CONFIG_EXT4_ENCRYPTION is not set
 # CONFIG_REISERFS_FS is not set
 # CONFIG_BTRFS_FS is not set
+# CONFIG_FS_ENCRYPTION is not set
 CONFIG_FANOTIFY=y
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_FUSE_FS=y
@@ -203,6 +206,8 @@ CONFIG_CUSE=y
 # Pseudo filesystems
 #
 # CONFIG_PROC_KCORE is not set
+# CONFIG_TMPFS_POSIX_ACL is not set
+# CONFIG_TMPFS_XATTR is not set
 CONFIG_HUGETLBFS=y
 CONFIG_HUGETLB_PAGE=y
 # CONFIG_CONFIGFS_FS is not set
@@ -262,6 +267,7 @@ CONFIG_VMFS_IRQ=0
 #
 # Compile-time checks and compiler options
 #
+CONFIG_DEBUG_INFO=y
 # CONFIG_MAGIC_SYSRQ is not set
 
 #
@@ -282,6 +288,7 @@ CONFIG_WAKEUP_LATENCY_HIST=y
 # CONFIG_FTRACE_SYSCALLS is not set
 CONFIG_STACK_TRACER=y
 # CONFIG_BLK_DEV_IO_TRACE is not set
+# CONFIG_PROBE_EVENTS is not set
 CONFIG_FUNCTION_PROFILER=y
 
 #
@@ -290,9 +297,16 @@ CONFIG_FUNCTION_PROFILER=y
 # CONFIG_KGDB is not set
 
 #
+# Security options
+#
+# CONFIG_KEYS is not set
+
+#
 # Crypto core or helper
 #
-# CONFIG_CRYPTO_NULL is not set
+CONFIG_CRYPTO_RNG_DEFAULT=m
+# CONFIG_CRYPTO_GF128MUL is not set
+CONFIG_CRYPTO_NULL=m
 # CONFIG_CRYPTO_TEST is not set
 
 #
@@ -303,13 +317,16 @@ CONFIG_FUNCTION_PROFILER=y
 #
 # Block modes
 #
+# CONFIG_CRYPTO_CBC is not set
 # CONFIG_CRYPTO_CTR is not set
 # CONFIG_CRYPTO_CTS is not set
+# CONFIG_CRYPTO_ECB is not set
+# CONFIG_CRYPTO_XTS is not set
 
 #
 # Hash modes
 #
-# CONFIG_CRYPTO_HMAC is not set
+CONFIG_CRYPTO_HMAC=m
 # CONFIG_CRYPTO_XCBC is not set
 
 #
@@ -319,7 +336,7 @@ CONFIG_FUNCTION_PROFILER=y
 # CONFIG_CRYPTO_MD5 is not set
 # CONFIG_CRYPTO_MICHAEL_MIC is not set
 # CONFIG_CRYPTO_SHA1 is not set
-# CONFIG_CRYPTO_SHA256 is not set
+CONFIG_CRYPTO_SHA256=m
 # CONFIG_CRYPTO_SHA512 is not set
 # CONFIG_CRYPTO_WP512 is not set
 
@@ -347,6 +364,13 @@ CONFIG_FUNCTION_PROFILER=y
 # Random Number Generation
 #
 CONFIG_CRYPTO_ANSI_CPRNG=y
+CONFIG_CRYPTO_DRBG_MENU=m
+CONFIG_CRYPTO_DRBG=m
+CONFIG_CRYPTO_JITTERENTROPY=m
+
+#
+# Certificates for signature checking
+#
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
