--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.9/axxiaarm/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.9/axxiaarm/common/common-non-hw.cfg
@@ -35,6 +35,7 @@ CONFIG_SCHED_AUTOGROUP=y
 # CONFIG_RD_LZ4 is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL_SYSCALL=y
+CONFIG_EMBEDDED=y
 
 #
 # Kernel Performance Events And Counters
@@ -146,6 +147,7 @@ CONFIG_BRIDGE_NETFILTER=m
 # SCSI Transports
 #
 # CONFIG_ATA_ACPI is not set
+# CONFIG_SCSI_VIRTIO is not set
 
 #
 # PIO-only SFF controllers
@@ -215,9 +217,11 @@ CONFIG_EXT3_FS=y
 # CONFIG_EXT3_FS_SECURITY is not set
 # CONFIG_EXT4_FS_POSIX_ACL is not set
 # CONFIG_EXT4_FS_SECURITY is not set
+# CONFIG_EXT4_ENCRYPTION is not set
 # CONFIG_REISERFS_FS is not set
 # CONFIG_BTRFS_FS is not set
 # CONFIG_FS_POSIX_ACL is not set
+# CONFIG_FS_ENCRYPTION is not set
 CONFIG_FUSE_FS=y
 CONFIG_CUSE=y
 
@@ -235,6 +239,8 @@ CONFIG_NTFS_FS=y
 #
 # Pseudo filesystems
 #
+# CONFIG_TMPFS_POSIX_ACL is not set
+# CONFIG_TMPFS_XATTR is not set
 # CONFIG_CONFIGFS_FS is not set
 CONFIG_JFFS2_FS=y
 CONFIG_CRAMFS=y
@@ -287,8 +293,9 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_UTF8 is not set
 
 #
-# Kernel hacking
+# Compile-time checks and compiler options
 #
+CONFIG_DEBUG_INFO=y
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_TIMER_STATS is not set
 
@@ -312,6 +319,7 @@ CONFIG_FUNCTION_PROFILER=y
 #
 # Security options
 #
+# CONFIG_ENCRYPTED_KEYS is not set
 # CONFIG_SECURITY is not set
 
 #
@@ -333,6 +341,8 @@ CONFIG_CRYPTO_SEQIV=y
 #
 CONFIG_CRYPTO_CTR=y
 # CONFIG_CRYPTO_CTS is not set
+# CONFIG_CRYPTO_ECB is not set
+# CONFIG_CRYPTO_XTS is not set
 
 #
 # Hash modes
