microcode: Port Intel Microcode recipe from meta-intel
The microcode data file contains the latest microcode definitions for
all Intel processors.

iucode_tool is a program to manipulate Intel i686 and X86-64 processor
microcode update collections, and to use the kernel facilities to
update the microcode on Intel system processors.

This is done in a porting effort of meta-intel metadata to meta-axxia.
The state of meta-intel is:
commit 6add41510412ca196efb3e4f949d403a8b6f35d7
linux-yocto/4.8: Update to latest stable release

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,4 +11,7 @@ BBFILE_PRIORITY_axxia = "5"
 
 # IMAGE_INSTALL_append += "u-boot-axxia"
 
+# Additional license directories.
+LICENSE_PATH += "${LAYERDIR}/custom-licenses"
+
 DISTRO_FEATURES_append += " pam"
