axxiax86-64: Port metadata from meta-intel
Port metadata from intel-corei7-64 machine configuration file to
our genric x86_64 machine.

For the wic filesystem type, add customized WKS_FILE.

This is done in a porting effort of meta-intel metadata to meta-axxia.
The state of meta-intel is:
commit 6add41510412ca196efb3e4f949d403a8b6f35d7
linux-yocto/4.8: Update to latest stable release

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/machine/axxiax86-64.conf
+++ b/conf/machine/axxiax86-64.conf
@@ -1,26 +1,58 @@
 #@TYPE: Machine
 #@NAME: axxiax86-64
-#@DESCRIPTION: Machine configuration for INTEL Axxia x86_64 systems
+#@DESCRIPTION: Machine configuration for INTEL Axxia x86_64 systems (Intel Core i7 CPU and later) with MMX, SSE, SSE2, SSE3, and SSSE3 instruction set support. Supports a moderately wide range of drivers that should boot and be usable on "typical" hardware.
 
-PREFERRED_VERSION_linux-yocto ?= "4.4%"
-#PREFERRED_VERSION_u-boot-axxia ?= "2013.01.01%"
+PREFERRED_VERSION_linux-yocto ?= "4.9%"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
-#PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-axxia"
-
-#EXTRA_IMAGEDEPENDS = "u-boot-axxia"
 
 MACHINE_FEATURES += "ext3"
+MACHINE_FEATURES += "pcbios efi"
+MACHINE_FEATURES += "va-impl-intel"
+MACHINE_FEATURES += "wifi 3g nfc"
+MACHINE_FEATURES += "intel-ucode"
 
-MACHINE_EXTRA_RRECOMMENDS += ""
+MACHINE_HWCODECS ?= "va-intel gstreamer-vaapi-1.0"
 
-require conf/machine/include/x86/arch-x86.inc
-DEFAULTTUNE_axxiax86-64 ?= "x86-64"
+MACHINE_EXTRA_RRECOMMENDS += "linux-firmware lms8"
+
+XSERVER ?= "${XSERVER_X86_BASE} \
+            ${XSERVER_X86_EXT} \
+            ${XSERVER_X86_FBDEV} \
+            ${XSERVER_X86_I915} \
+            ${XSERVER_X86_I965} \
+            ${XSERVER_X86_MATROX_MGA} \
+            ${XSERVER_X86_MODESETTING} \
+            ${XSERVER_X86_VESA} \
+           "
+
+require conf/machine/include/tune-corei7.inc
+require conf/machine/include/x86-base.inc
+require conf/machine/include/intel/intel-common-pkgarch.inc
+DEFAULTTUNE_axxiax86-64 ?= "corei7-64"
 
 KARCH = "x86_64"
 KERNEL_IMAGETYPE = "bzImage"
-UBOOT_ENTRYPOINT = "0x400000"
 KEEPUIMAGE = "no"
 
-SERIAL_CONSOLE = "9600 ttyAMA0"
+SYSLINUX_OPTS = "serial 0 115200"
+SERIAL_CONSOLE = "9600;ttyAMA0 115200;ttyS0 115200;ttyS2"
+APPEND += "rootwait console=ttyS0,115200 console=tty0"
+
+PACKAGE_INSTALL_append_pn-core-image-minimal-initramfs = " linux-firmware-i915"
+
+IMAGE_FSTYPES += "wic"
+IMAGE_FSTYPES += "hddimg"
+WKS_FILE ?= "systemd-bootdisk-uuid.wks"
+do_image_wic[depends] += "gptfdisk-native:do_populate_sysroot"
+do_image_wic[recrdeptask] += "do_bootimg"
+
+# include the user space intel microcode loading support in the generated images.
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append = "${@bb.utils.contains('MACHINE_FEATURES', 'intel-ucode', ' intel-microcode', '', d)}"
+
+# for the early boot time kernel microcode loading support,
+# merge the microcode data in the final initrd image.
+INITRD_LIVE_prepend = "${@bb.utils.contains('MACHINE_FEATURES', 'intel-ucode', '${DEPLOY_DIR_IMAGE}/microcode.cpio ', '', d)}"
+
+EFI_PROVIDER ?= "rmc-systemd-boot"
 
 FORTRAN_forcevariable = ",fortran"
