simicsfs: Create initial recipe for module and load it on boot
Initial recipe for simicsfs module with sources located local in files.

Set simicsfs module as essential dependince for intel-corei7-64 machine:
MACHINE_ESSENTIAL_EXTRA_RDEPENDS

Load module automatically on boot: KERNEL_MODULE_AUTOLOAD.

Create /host directory and mount host fs on this mountpoint using the
simicsfs module on boot time (fstab).

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/machine/axxiax86-64.conf
+++ b/conf/machine/axxiax86-64.conf
@@ -55,4 +55,8 @@ INITRD_LIVE_prepend = "${@bb.utils.contains('MACHINE_FEATURES', 'intel-ucode', '
 
 EFI_PROVIDER ?= "rmc-systemd-boot"
 
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-simicsfs"
+KERNEL_MODULE_AUTOLOAD += " simicsfs"
+IMAGE_INSTALL_append = " simicsfs-mod"
+
 FORTRAN_forcevariable = ",fortran"
