conf/machine: Set ext3 and tar.gz permenent IMAGE_FSTYPES
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/machine/axxiaarm.conf
+++ b/conf/machine/axxiaarm.conf
@@ -31,6 +31,9 @@ KERNEL_IMAGETYPE = "zImage"
 UBOOT_ENTRYPOINT = "0x400000"
 KEEPUIMAGE = "no"
 
+IMAGE_FSTYPES += "ext2"
+IMAGE_FSTYPES += "tar.gz"
+
 SERIAL_CONSOLE = "9600 ttyAMA0"
 
 FORTRAN_forcevariable = ",fortran"
