--- a/conf/machine/axxiapowerpc.conf
+++ b/conf/machine/axxiapowerpc.conf
@@ -17,6 +17,9 @@ KERNEL_IMAGETYPE = "uImage"
 UBOOT_ENTRYPOINT = "0x400000"
 KEEPUIMAGE = "no"
 
+IMAGE_FSTYPES += "ext2"
+IMAGE_FSTYPES += "tar.gz"
+
 SERIAL_CONSOLE = "115200 ttyS0"
 
 FORTRAN_forcevariable = ",fortran"
