--- a/conf/machine/axxiaarm64.conf
+++ b/conf/machine/axxiaarm64.conf
@@ -29,6 +29,9 @@ KERNEL_IMAGETYPE = "Image"
 UBOOT_ENTRYPOINT = "0x400000"
 KEEPUIMAGE = "no"
 
+IMAGE_FSTYPES += "ext2"
+IMAGE_FSTYPES += "tar.gz"
+
 SERIAL_CONSOLE = "9600 ttyAMA0"
 
 FORTRAN_forcevariable = ",fortran"
