--- a/conf/machine/axxiax86-64.conf
+++ b/conf/machine/axxiax86-64.conf
@@ -42,6 +42,8 @@ PACKAGE_INSTALL_append_pn-core-image-minimal-initramfs = " linux-firmware-i915"
 
 IMAGE_FSTYPES += "wic"
 IMAGE_FSTYPES += "hddimg"
+IMAGE_FSTYPES += "ext2"
+IMAGE_FSTYPES += "tar.gz"
 WKS_FILE ?= "systemd-bootdisk-uuid.wks"
 do_image_wic[depends] += "gptfdisk-native:do_populate_sysroot"
 do_image_wic[recrdeptask] += "do_bootimg"
