axxiax86-64: Correct serial console parameters
Graphical console works, but the serial console hangs because of
the wrong parameters

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/machine/axxiax86-64.conf
+++ b/conf/machine/axxiax86-64.conf
@@ -35,7 +35,7 @@ KERNEL_IMAGETYPE = "bzImage"
 KEEPUIMAGE = "no"
 
 SYSLINUX_OPTS = "serial 0 115200"
-SERIAL_CONSOLE = "9600;ttyAMA0 115200;ttyS0 115200;ttyS2"
+SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS2"
 APPEND += "rootwait console=ttyS0,115200 console=tty0"
 
 PACKAGE_INSTALL_append_pn-core-image-minimal-initramfs = " linux-firmware-i915"
