Update simicsfs from 1.20 to 1.21.
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/recipes-kernel/simicsfs-mod/files/Makefile
+++ b/recipes-kernel/simicsfs-mod/files/Makefile
@@ -1,29 +1,11 @@
 #
 # Makefile for Simics hostfs
 
-ifneq ($(KERNELRELEASE),)
-
-# building with Kbuild
-obj-m := simicsfs.o
-simicsfs-y := hostfs_inode.o hostfs_super.o hostfs_dir.o hostfs_file.o \
-	hostfs_host.o
-
-else
-
-# building normally
-KERNELDIR ?= /lib/modules/`uname -r`/build
-default:
-	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules
-
-modules_install:
-	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules_install
-
-tests:
-	 $(MAKE) -C $@ $(BUILD_RULE)
-
-clean:
-	$(MAKE) -C $(KERNELDIR) M=$(PWD) clean
-
-.PHONY: clean tests
-
+ifeq (,$(CONFIG_SIMICSFS))
+CONFIG_SIMICSFS=m
 endif
+
+obj-$(CONFIG_SIMICSFS) += simicsfs.o
+
+simicsfs-objs := hostfs_inode.o hostfs_super.o hostfs_dir.o hostfs_file.o \
+	hostfs_host.o
