simicsfs: Add Makefile directives for building normally
In the newer version of simicsfs (1.21), directives for building
normally the module (without the kernel), as external modules are
removed. Add directives again.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/recipes-kernel/simicsfs-mod/files/Makefile
+++ b/recipes-kernel/simicsfs-mod/files/Makefile
@@ -5,7 +5,29 @@ ifeq (,$(CONFIG_SIMICSFS))
 CONFIG_SIMICSFS=m
 endif
 
-obj-$(CONFIG_SIMICSFS) += simicsfs.o
+ifneq ($(KERNELRELEASE),)
 
-simicsfs-objs := hostfs_inode.o hostfs_super.o hostfs_dir.o hostfs_file.o \
+# building with Kbuild
+obj-m := simicsfs.o
+simicsfs-y := hostfs_inode.o hostfs_super.o hostfs_dir.o hostfs_file.o \
 	hostfs_host.o
+
+else
+
+# building normally
+KERNELDIR ?= /lib/modules/`uname -r`/build
+default:
+	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules
+
+modules_install:
+	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules_install
+
+tests:
+	 $(MAKE) -C $@ $(BUILD_RULE)
+
+clean:
+	$(MAKE) -C $(KERNELDIR) M=$(PWD) clean
+
+.PHONY: clean tests
+
+endif
