--- a/conf/machine/axxiax86-64.conf
+++ b/conf/machine/axxiax86-64.conf
@@ -36,7 +36,7 @@ KEEPUIMAGE = "no"
 
 SYSLINUX_OPTS = "serial 0 115200"
 SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS2"
-APPEND += "rootwait console=ttyS0,115200 console=tty0"
+APPEND += "rootwait console=ttyS0,115200 console=tty0 intel_iommu=on"
 
 PACKAGE_INSTALL_append_pn-core-image-minimal-initramfs = " linux-firmware-i915"
 
