--- a/conf/machine/axxiaarm.conf
+++ b/conf/machine/axxiaarm.conf
@@ -4,6 +4,7 @@
 
 PREFERRED_VERSION_linux-yocto ?= "4.1%"
 #PREFERRED_VERSION_u-boot-axxia ?= "2013.01.01%"
+PREFERRED_VERSION_nfs-utils ?= "1.3.1"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
 #PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-axxia"
 #EXTRA_IMAGEDEPENDS = "u-boot-axxia"
