--- a/conf/machine/axxiapowerpc.conf
+++ b/conf/machine/axxiapowerpc.conf
@@ -4,6 +4,7 @@
 
 PREFERRED_VERSION_linux-yocto ?= "3.14%"
 PREFERRED_VERSION_u-boot-axxia ?= "2010.03%"
+PREFERRED_VERSION_nfs-utils ?= "1.3.1"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
 
 MACHINE_FEATURES += ""
