axxia-image-large: Add Linux Container Support
Add LXC package and his dependencies to axxia large image.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/machine/axxiaarm.conf
+++ b/conf/machine/axxiaarm.conf
@@ -8,6 +8,7 @@ PREFERRED_VERSION_nfs-utils ?= "1.3.1"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
 #PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-axxia"
 #EXTRA_IMAGEDEPENDS = "u-boot-axxia"
+PREFERRED_VERSION_lxc ?= "2.0.6"
 
 MACHINE_FEATURES += "ext3"
 
