--- a/conf/machine/axxiaarm64.conf
+++ b/conf/machine/axxiaarm64.conf
@@ -7,6 +7,7 @@ PREFERRED_VERSION_linux-yocto ?= "4.1%"
 PREFERRED_VERSION_nfs-utils ?= "1.3.1"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
 #PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-axxia"
+PREFERRED_VERSION_lxc ?= "2.0.6"
 
 #EXTRA_IMAGEDEPENDS = "u-boot-axxia"
 
