--- a/conf/machine/axxiax86-64.conf
+++ b/conf/machine/axxiax86-64.conf
@@ -5,6 +5,7 @@
 PREFERRED_VERSION_linux-yocto ?= "4.9%"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
 PREFERRED_VERSION_nfs-utils ?= "1.3.1"
+PREFERRED_VERSION_lxc ?= "2.0.6"
 
 MACHINE_FEATURES += "ext3"
 MACHINE_FEATURES += "pcbios efi"
