machine/axxia: Skip kernel bbappend from meta-virtualization
For axxia kernel (from Github)a defconfig is used, so skip bbappend
from meta-virtualization which add kernel fragments which are not found:

WARNING: addon feature "features/kvm/qemu-kvm-enable" was not found
ERROR: required features were not found. aborting

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/machine/axxiapowerpc.conf
+++ b/conf/machine/axxiapowerpc.conf
@@ -23,3 +23,6 @@ IMAGE_FSTYPES += "ext2"
 IMAGE_FSTYPES += "tar.gz"
 
 SERIAL_CONSOLE = "115200 ttyS0"
+
+# For axxia kernel a defconfig is used, so skip bbappend from meta-virtualization which add kernel fragments
+BBMASK = "${@base_conditional('AXXIA_SRC', 'axxia-tip', '/meta-virtualization/recipes-kernel/linux/', '', d)}"
