--- a/conf/machine/axxiax86-64.conf
+++ b/conf/machine/axxiax86-64.conf
@@ -62,3 +62,6 @@ EFI_PROVIDER ?= "rmc-systemd-boot"
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-simicsfs"
 KERNEL_MODULE_AUTOLOAD += " simicsfs"
 IMAGE_INSTALL_append = " simicsfs-mod"
+
+# For axxia kernel a defconfig is used, so skip bbappend from meta-virtualization which add kernel fragments
+BBMASK = "${@base_conditional('AXXIA_SRC', 'axxia-tip', '/meta-virtualization/recipes-kernel/linux/', '', d)}"
