machine/axxia: Skip lxc fragments from meta-virtualization
Since in meta-axxia we have our lxc fragment, skip bbappends
from meta-virtualization which add lxc and some other fragments
for Yocto kernel.
Until now, this was done only for Github kernel.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/machine/axxiaarm64.conf
+++ b/conf/machine/axxiaarm64.conf
@@ -36,5 +36,5 @@ IMAGE_FSTYPES += "tar.gz"
 
 SERIAL_CONSOLE = "9600 ttyAMA0"
 
-# For axxia kernel a defconfig is used, so skip bbappend from meta-virtualization which add kernel fragments
-BBMASK = "${@base_conditional('AXXIA_SRC', 'axxia-tip', '/meta-virtualization/recipes-kernel/linux/', '', d)}"
+# For axxia kernels skip bbappend from meta-virtualization which add kernel fragments
+BBMASK = "/meta-virtualization/recipes-kernel/linux/"
