--- a/conf/machine/axxiax86-64.conf
+++ b/conf/machine/axxiax86-64.conf
@@ -63,5 +63,5 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-simicsfs"
 KERNEL_MODULE_AUTOLOAD += " simicsfs"
 IMAGE_INSTALL_append = " simicsfs-mod"
 
-# For axxia kernel a defconfig is used, so skip bbappend from meta-virtualization which add kernel fragments
-BBMASK = "${@base_conditional('AXXIA_SRC', 'axxia-tip', '/meta-virtualization/recipes-kernel/linux/', '', d)}"
+# For axxia kernels skip bbappend from meta-virtualization which add kernel fragments
+BBMASK = "/meta-virtualization/recipes-kernel/linux/"
