--- a/conf/machine/axxiapowerpc.conf
+++ b/conf/machine/axxiapowerpc.conf
@@ -24,5 +24,5 @@ IMAGE_FSTYPES += "tar.gz"
 
 SERIAL_CONSOLE = "115200 ttyS0"
 
-# For axxia kernel a defconfig is used, so skip bbappend from meta-virtualization which add kernel fragments
-BBMASK = "${@base_conditional('AXXIA_SRC', 'axxia-tip', '/meta-virtualization/recipes-kernel/linux/', '', d)}"
+# For axxia kernels skip bbappend from meta-virtualization which add kernel fragments
+BBMASK = "/meta-virtualization/recipes-kernel/linux/"
