--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.9/axxiaarm64/common/dbg-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.9/axxiaarm64/common/dbg-non-hw.cfg
@@ -32,6 +32,7 @@ CONFIG_DEBUG_STACK_USAGE=y
 CONFIG_DEBUG_VM=y
 CONFIG_DEBUG_VM_RB=y
 # CONFIG_DEBUG_VM is not set
+CONFIG_DEBUG_MEMORY_INIT=y
 # CONFIG_DEBUG_PER_CPU_MAPS is not set
 CONFIG_DEBUG_HIGHMEM=y
 CONFIG_DEBUG_SHIRQ=y
