--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm/common/dbg-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiaarm/common/dbg-non-hw.cfg
@@ -34,6 +34,7 @@ CONFIG_DEBUG_VM_RB=y
 CONFIG_DEBUG_MEMORY_INIT=y
 # CONFIG_DEBUG_PER_CPU_MAPS is not set
 CONFIG_DEBUG_HIGHMEM=y
+CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_DEBUG_SHIRQ=y
 
 #
