linux-yocto: 4.1: powerpc: Update fragments to match 1.59 tag
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiapowerpc/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiapowerpc/common/common-non-hw.cfg
@@ -15,24 +15,13 @@
 # General setup
 #
 CONFIG_CROSS_COMPILE="powerpc-linux-"
-CONFIG_FHANDLE=y
+# CONFIG_FHANDLE is not set
 
 #
 # RCU Subsystem
 #
+# CONFIG_CGROUPS is not set
 CONFIG_LOG_BUF_SHIFT=14
-CONFIG_CGROUPS=y
-# CONFIG_CGROUP_DEBUG is not set
-# CONFIG_CGROUP_FREEZER is not set
-# CONFIG_CGROUP_DEVICE is not set
-# CONFIG_CPUSETS is not set
-# CONFIG_CGROUP_CPUACCT is not set
-# CONFIG_RESOURCE_COUNTERS is not set
-# CONFIG_CGROUP_VM is not set
-CONFIG_CGROUP_SCHED=y
-# CONFIG_RT_GROUP_SCHED is not set
-# CONFIG_BLK_CGROUP is not set
-# CONFIG_FAIR_GROUP_SCHED is not set
 # CONFIG_NAMESPACES is not set
 CONFIG_KALLSYMS_ALL=y
 # CONFIG_RELAY is not set
@@ -158,6 +147,7 @@ CONFIG_THERMAL=y
 #
 # File systems
 #
+CONFIG_EXT2_FS=y
 # CONFIG_EXT2_FS_XATTR is not set
 # CONFIG_EXT3_FS is not set
 # CONFIG_EXT4_FS is not set
