--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiapowerpc/preempt-rt/dbg-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiapowerpc/preempt-rt/dbg-non-hw.cfg
@@ -32,6 +32,7 @@ CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_DEBUG_PER_CPU_MAPS=y
 CONFIG_DEBUG_HIGHMEM=y
 CONFIG_DEBUG_STACKOVERFLOW=y
+CONFIG_DEBUG_MEMORY_INIT=y
 
 #
 # Debug Lockups and Hangs
