--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiapowerpc/standard/dbg-nosmp-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiapowerpc/standard/dbg-nosmp-non-hw.cfg
@@ -12,6 +12,18 @@
 #.........................................................................
 
 #
+# Kernel Performance Events And Counters
+#
+# CONFIG_SLUB_DEBUG is not set
+CONFIG_OPROFILE=y
+
+#
+# Kernel options
+#
+CONFIG_HIGHMEM=y
+# CONFIG_MTD_NAND_EP501X_UBOOTENV is not set
+
+#
 # Memory Debugging
 #
 CONFIG_DEBUG_PAGEALLOC=y
@@ -32,6 +44,7 @@ CONFIG_DEBUG_VM_RB=y
 CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_DEBUG_PER_CPU_MAPS=y
 CONFIG_DEBUG_HIGHMEM=y
+CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_DEBUG_SHIRQ=y
 
 #
