--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -14,4 +14,7 @@ BBFILE_PRIORITY_axxia = "5"
 # Additional license directories.
 LICENSE_PATH += "${LAYERDIR}/custom-licenses"
 
-DISTRO_FEATURES_append += " pam"
+DISTRO_FEATURES_append = " pam systemd"
+DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
+VIRTUAL-RUNTIME_init_manager = "systemd"
+VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
