linux-yocto: Enable NFSD support for Yocto
Enable CONFIG_NFSD kernel option for the Yocto Kernel
to fix the following systemd error:

[FAILED] Failed to mount NFSD configuration filesystem.
systemd[1]: Mounting NFSD configuration filesystem...
mount[1041]: mount: unknown filesystem type 'nfsd'
systemd[1]: Failed to mount NFSD configuration filesystem.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.9/axxiaarm64/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.9/axxiaarm64/common/common-non-hw.cfg
@@ -222,6 +222,7 @@ CONFIG_SQUASHFS_EMBEDDED=y
 # CONFIG_AUFS_FS is not set
 # CONFIG_CIFS is not set
 # CONFIG_NFS_V4 is not set
+CONFIG_NFSD=y
 CONFIG_9P_FS=y
 CONFIG_NLS_CODEPAGE_437=y
 # CONFIG_NLS_CODEPAGE_737 is not set
