--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiapowerpc/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.1/axxiapowerpc/common/common-non-hw.cfg
@@ -173,6 +173,7 @@ CONFIG_JFFS2_FS=y
 # CONFIG_ROMFS_FS is not set
 # CONFIG_AUFS_FS is not set
 CONFIG_NFS_V3_ACL=y
+CONFIG_NFSD=y
 CONFIG_NFS_ACL_SUPPORT=y
 # CONFIG_CIFS is not set
 # CONFIG_NLS_CODEPAGE_437 is not set
