--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.9/axxiaarm/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.9/axxiaarm/common/common-non-hw.cfg
@@ -251,6 +251,7 @@ CONFIG_HUGETLB_PAGE=y
 # CONFIG_AUFS_FS is not set
 CONFIG_NFS_FSCACHE=y
 CONFIG_NFS_DEBUG=y
+CONFIG_NFSD=y
 CONFIG_SUNRPC_DEBUG=y
 # CONFIG_CIFS is not set
 CONFIG_NLS_CODEPAGE_437=y
