--- a/recipes-kernel/linux/conf/linux-yocto/linux-4.9/axxiaarm64/common/lxc.cfg
+++ b/recipes-kernel/linux/conf/linux-yocto/linux-4.9/axxiaarm64/common/lxc.cfg
@@ -45,6 +45,7 @@ CONFIG_NF_NAT_MASQUERADE_IPV4=y
 CONFIG_NF_NAT_MASQUERADE_IPV6=y
 CONFIG_IP_NF_IPTABLES=y
 CONFIG_IP6_NF_IPTABLES=y
+CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_NAT=y
 CONFIG_IP6_NF_NAT=y
 CONFIG_IP_NF_TARGET_MASQUERADE=y
@@ -52,3 +53,4 @@ CONFIG_IP6_NF_TARGET_MASQUERADE=y
 CONFIG_IP_NF_MANGLE=y
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_NETFILTER_XT_TARGET_CHECKSUM=y
+CONFIG_NETFILTER_XT_MATCH_STATE=y
