linux-yocto: BBMASK kernel bbappend recipes from meta-intel
Because meta-axxia inherit a lot of metadata from meta-intel,
especially axxiax86-64 machine include all the matadata
from intel-corei7-64 machine, we inherit also the preferred
versions of kernel from meta-intel.

This patch add all the kernel bbappend recipes to BBMASK list
to be skip by bitbake (as we did for meta-virtualization).

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/machine/axxiaarm64.conf
+++ b/conf/machine/axxiaarm64.conf
@@ -36,5 +36,6 @@ IMAGE_FSTYPES += "tar.gz"
 
 SERIAL_CONSOLE = "9600 ttyAMA0"
 
-# For axxia kernels skip bbappend from meta-virtualization which add kernel fragments
-BBMASK = "/meta-virtualization/recipes-kernel/linux/"
+# For axxia kernels skip bbappends from meta-virtualization and meta-intel to skip fragments and layer specific setings for kernel
+BBMASK = "meta-virtualization/recipes-kernel/linux"
+BBMASK .= "|meta-intel/common/recipes-kernel/linux"
