--- a/conf/machine/axxiax86-64.conf
+++ b/conf/machine/axxiax86-64.conf
@@ -27,5 +27,6 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-simicsfs"
 KERNEL_MODULE_AUTOLOAD += " simicsfs"
 IMAGE_INSTALL_append = " simicsfs-mod"
 
-# For axxia kernels skip bbappend from meta-virtualization which add kernel fragments
-BBMASK = "/meta-virtualization/recipes-kernel/linux/"
+# For axxia kernels skip bbappends from meta-virtualization and meta-intel to skip fragments and layer specific setings for kernel
+BBMASK = "meta-virtualization/recipes-kernel/linux"
+BBMASK .= "|meta-intel/common/recipes-kernel/linux"
