README: Documenting the removal of AXXIA_SRC variable
Part of A0181 (Reorganize kernel recipes from meta-axxia):

Get rid of AXXIA_SRC variable and most of inc files from
/recipes-kernel/linux by having separate recipes for the Kernel
from Github named linux-axxia.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -4,14 +4,11 @@ MACHINE = "axxiaarm64"
 # Chipset required only for arm builds: 5500, X9, XLF
 CHIPSET = "X9"
 
-# Kernel providers: linux-yocto, linux-yocto-rt
-PREFERRED_PROVIDER_virtual/kernel = "linux-yocto-rt"
+# Kernel providers: linux-yocto, linux-yocto-rt, linux-axxia, linux-axxia-rt
+PREFERRED_PROVIDER_virtual/kernel = "linux-yocto"
 
 # Kernel versions: 4.1, 4.8, 4.9
-PREFERRED_VERSION_linux-yocto-rt = "4.9%"
-
-# Kernel source: axxia-tip, linux-yocto
-AXXIA_SRC = "axxia-tip"
+PREFERRED_VERSION_linux-yocto = "4.9%"
 
 BB_NUMBER_THREADS = "12"
 PARALLEL_MAKE = "-j 12"
