linux-yocto-4.1: axxiaarm: Update fragments to match 1.65 tag
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/recipes-kernel/linux/conf/yocto-4.1/axxiaarm/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/yocto-4.1/axxiaarm/common/common-non-hw.cfg
@@ -107,6 +107,7 @@ CONFIG_LLC=y
 # CONFIG_NF_REJECT_IPV4 is not set
 # CONFIG_IP_NF_MATCH_ECN is not set
 # CONFIG_IP_NF_MATCH_TTL is not set
+# CONFIG_IP_NF_TARGET_REJECT is not set
 # CONFIG_IP_NF_FILTER is not set
 # CONFIG_IP_NF_TARGET_NETMAP is not set
 # CONFIG_IP_NF_TARGET_REDIRECT is not set
