--- a/recipes-kernel/linux/conf/yocto-4.1/axxiapowerpc/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/yocto-4.1/axxiapowerpc/common/common-non-hw.cfg
@@ -15,12 +15,22 @@
 # General setup
 #
 CONFIG_CROSS_COMPILE="powerpc-linux-"
-# CONFIG_FHANDLE is not set
+CONFIG_FHANDLE=y
 
 #
 # RCU Subsystem
 #
-# CONFIG_CGROUPS is not set
+CONFIG_CGROUPS=y
+# CONFIG_CGROUP_DEBUG is not set
+# CONFIG_CGROUP_FREEZER is not set
+# CONFIG_CGROUP_DEVICE is not set
+# CONFIG_CPUSETS is not set
+# CONFIG_CGROUP_CPUACCT is not set
+# CONFIG_MEMCG is not set
+CONFIG_CGROUP_SCHED=y
+# CONFIG_FAIR_GROUP_SCHED is not set
+# CONFIG_RT_GROUP_SCHED is not set
+# CONFIG_BLK_CGROUP is not set
 CONFIG_LOG_BUF_SHIFT=14
 # CONFIG_NAMESPACES is not set
 CONFIG_KALLSYMS_ALL=y
@@ -48,6 +58,11 @@ CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_LBDAF is not set
 # CONFIG_BLK_DEV_BSG is not set
+
+#
+# IO Schedulers
+#
+# CONFIG_FREEZER is not set
 
 #
 # Userspace binary formats
