linux-yocto-4.1: axxiaarm64: Update fragments to match 1.65 tag
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/recipes-kernel/linux/conf/yocto-4.1/axxiaarm64/common/xlf.cfg
+++ b/recipes-kernel/linux/conf/yocto-4.1/axxiaarm64/common/xlf.cfg
@@ -12,4 +12,4 @@
 #.........................................................................
 
 # CONFIG_EDAC is not set
-# CONFIG_RAPIDIO is not set
+# CONFIG_AXXIA_FAULT is not set
