--- a/recipes-kernel/linux/conf/yocto-4.1/axxiaarm64/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/yocto-4.1/axxiaarm64/common/common-non-hw.cfg
@@ -102,6 +102,7 @@ CONFIG_BPF_JIT=y
 # CONFIG_IP_NF_MATCH_ECN is not set
 # CONFIG_IP_NF_MATCH_TTL is not set
 # CONFIG_IP_NF_FILTER is not set
+# CONFIG_IP_NF_TARGET_REJECT is not set
 # CONFIG_IP_NF_TARGET_NETMAP is not set
 # CONFIG_IP_NF_TARGET_REDIRECT is not set
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
