--- a/conf/machine/axxiax86-64.conf
+++ b/conf/machine/axxiax86-64.conf
@@ -17,7 +17,7 @@ KARCH = "x86_64"
 KERNEL_IMAGETYPE = "bzImage"
 KEEPUIMAGE = "no"
 
-APPEND += "intel_iommu=on"
+APPEND = "rootwait console=ttyS5,115200 console=tty0 intel_iommu=on"
 
 IMAGE_FSTYPES += "hddimg"
 IMAGE_FSTYPES += "ext2"
