--- a/conf/machine/axxiax86-64.conf
+++ b/conf/machine/axxiax86-64.conf
@@ -19,6 +19,9 @@ KEEPUIMAGE = "no"
 
 APPEND = "rootwait console=ttyS5,115200 console=tty0 intel_iommu=on"
 
+MULTILIBS = "multilib:lib32"
+DEFAULTTUNE_virtclass-multilib-lib32 = "corei7-32"
+
 IMAGE_FSTYPES += "hddimg"
 IMAGE_FSTYPES += "ext2"
 IMAGE_FSTYPES += "tar.gz"
