--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,12 +9,9 @@ BBFILE_COLLECTIONS += "axxia"
 BBFILE_PATTERN_axxia := "^${LAYERDIR}/"
 BBFILE_PRIORITY_axxia = "5"
 
-# IMAGE_INSTALL_append += "u-boot-axxia"
-
-# Additional license directories.
-LICENSE_PATH += "${LAYERDIR}/custom-licenses"
-
 DISTRO_FEATURES_append = " pam systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
+
+PREFERRED_VERSION_lxc ?= "2.0.6"
