axxiax86-64: Install dh-generic kernel module
Adding CONFIG_CRYPTO_DH=m builds the dh_generic module (dh_generic.ko),
but doesn't include it in the root file system.
So, we need to explicit add the kernel sub-package which include the
dh_generic module.

A0192 - dh_generic

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/machine/axxiax86-64.conf
+++ b/conf/machine/axxiax86-64.conf
@@ -26,7 +26,8 @@ IMAGE_FSTYPES += "tar.gz"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-simicsfs"
 KERNEL_MODULE_AUTOLOAD += " simicsfs"
-IMAGE_INSTALL_append = " simicsfs-mod"
+IMAGE_INSTALL_append = " simicsfs-mod \
+			 ${@base_conditional('RUNTARGET', 'frio', 'kernel-module-dh-generic', '', d)}"
 
 # For axxia kernels skip bbappends from meta-virtualization and meta-intel to skip fragments and layer specific setings for kernel
 BBMASK = "meta-virtualization/recipes-kernel/linux"
